2001-09-30  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-graph.c (gnm_graph_vector_as_string) : screw it.
	  Simplify my life by treating constants as expressions.
	(gnm_graph_series_get_dimension) : new utility.
	(gnm_graph_series_add_dimension) : new utility.

2001-09-28  Morten Welinder  <terra@diku.dk>

	* src/regression.c (LUPDecomp): Revert last change.  This seems to
 	fix regression, but there is something really bogus going on here.

2001-09-28  Jody Goldberg <jgoldberg@home.com>

	* src/item-cursor.c (item_cursor_set_bounds_visibly) : Actually use
	  the visible_{col,row} args,  Rename them to something more obvious
	  to avoid future stupidity.

2001-09-27  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-object.c (cell_offset_calc_pixel) : round to nearest
	  pixel, rather than truncating.

2001-09-27  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-control-gui.c (set_acetate_coords) : make the control pts
	  prettier.
	(set_item_x_y) : ditto.

2001-09-27  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-object-graphic.c (sheet_object_filled_print) : fix the
	  color mapping.  This should really be a convenience routine.
	* src/sheet-object-graphic.c (sheet_object_graphic_print) : ditto.

2001-09-27  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-object-graphic.c (sheet_object_graphic_fill_color_set) :
	  Use StyleColors and make public.
	(sheet_object_graphic_destroy) : unref the fill colour.
	(sheet_object_graphic_new_view) : translate from stylecolor to gdk.
	(sheet_object_graphic_read_xml) : use style colors.
	(sheet_object_graphic_write_xml) : use style colors.
	(sheet_object_graphic_clone) : reference the fill colour.
	(sheet_object_graphic_print) : use style colour.
	(cb_dialog_graphic_clicked) : ditto.
	(cb_dialog_filled_clicked) : ditto.
	(sheet_object_graphic_user_config) : ditto.
	(sheet_object_filled_user_config) : ditto.

	* src/style-color.c (style_color_ref) : NULL is ok.
	(style_color_unref) : ditto.
